Allocation of compile task fails with assert: "Leaking compilation tasks?"

XMLWordPrintable

    • b12
    • generic

        Weblogic testrun failed on i586 with assert:

        # Internal Error (/scratch/opt/jprt/T/P1/205047.iggy/s/hotspot/src/share/vm/compiler/compileTask.cpp:51), pid=7798, tid=9411
        # assert(WhiteBoxAPI || _num_allocated_tasks < 10000) failed: Leaking compilation tasks?

        no aot-compiled code was used.

          1. hs_err_pid25576.log
            174 kB
            David Holmes
          2. JTwork_applications_runthese_RunThese30M_hs_err_pid25576.log
            174 kB
            Vladimir Kozlov
          3. JTwork_applications_runthese_RunThese30M_hs_err_pid2113.log
            201 kB
            Vladimir Kozlov
          4. hs_err_pid29462.log
            169 kB
            Vladimir Kozlov
          5. Test.java
            3 kB
            Tobias Hartmann
          6. patch
            19 kB
            Roland Westrelin

              Assignee:
              Tobias Hartmann
              Reporter:
              Dmitrij Pochepko
              Votes:
              0 Vote for this issue
              Watchers:
              15 Start watching this issue

                Created:
                Updated:
                Resolved: